--- a/common/contact.html
+++ b/common/contact.html
@@ -1,87 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Contact Us</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="../css/testi.css">
-</head>
-<body>
-
-<!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Bootstrap Website</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="../index.html">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./about.html">About</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Contact</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-
-<!-- Contact Page Content -->
-<div class="container mt-3">
-  <h1>Contact Us</h1>
-  <form id="contact-form">
-    <div class="form-group">
-      <label for="name">Name:</label>
-      <input type="text" class="form-control" id="name" name="name" required>
-    </div>
-    <div class="form-group">
-      <label for="message">Message:</label>
-      <textarea class="form-control" id="message" name="message" rows="5" required></textarea>
-    </div>
-    <div class="form-group">
-        <label for="important">Important:</label>
-        <input type="checkbox" id="important" name="important">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Contact Us</title>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="../css/testi.css" />
+  </head>
+  <body>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">Bootstrap Website</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="../index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./about.html">About</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Contact</a>
+          </li>
+        </ul>
       </div>
-    <button type="submit" class="btn btn-primary">Send</button>
-  </form>
+    </nav>
 
-  <h2>Messages</h2>
-  <ul id="messages-list"></ul>
-</div>
+    <!-- Contact Page Content -->
+    <div class="container mt-3">
+      <h1>Contact Us</h1>
+      <form id="contact-form">
+        <div class="form-group">
+          <label for="name">Name:</label>
+          <input
+            type="text"
+            class="form-control"
+            id="name"
+            name="name"
+            required
+          />
+        </div>
+        <div class="form-group">
+          <label for="message">Message:</label>
+          <textarea
+            class="form-control"
+            id="message"
+            name="message"
+            rows="5"
+            required
+          ></textarea>
+        </div>
+        <div class="form-group">
+          <label for="important">Important:</label>
+          <input type="checkbox" id="important" name="important" />
+        </div>
+        <button type="submit" class="btn btn-primary">Send</button>
+      </form>
 
-<!-- JavaScript Files -->
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+      <h2>Messages</h2>
+      <ul id="messages-list"></ul>
+    </div>
 
-<script>
-$(document).ready(function() {
-  $("#contact-form").submit(function(e) {
-    e.preventDefault();
-    var name = $("#name").val();
-    var message = $("#message").val();
-    var date = new Date();
-    var time = date.toLocaleTimeString();
-    var dateTime = date.toLocaleDateString() + ' ' + time;
+    <!-- JavaScript Files -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
-    // Check if "Important" checkbox is checked
-    var important = $("#important").prop("checked");
-    if (important) {
-      message = "!!! " + message + " !!!";
-      $("#messages-list").append('<li class="text-danger"><strong>' + name + '</strong> (' + dateTime + '):<br>' + message + '</li>');
-    } else {
-      $("#messages-list").append('<li><strong>' + name + '</strong> (' + dateTime + '):<br>' + message + '</li>');
-    }
+    <script>
+      $(document).ready(function () {
+        $("#contact-form").submit(function (e) {
+          e.preventDefault();
+          var name = $("#name").val();
+          var message = $("#message").val();
+          var date = new Date();
+          var time = date.toLocaleTimeString();
+          var dateTime = date.toLocaleDateString() + " " + time;
 
-    $("#contact-form")[0].reset();
-  });
-});
-</script>
+          // Check if "Important" checkbox is checked
+          var important = $("#important").prop("checked");
+          if (important) {
+            message = "!!! " + message + " !!!";
+            $("#messages-list").append(
+              '<li class="text-danger"><strong>' +
+                name +
+                "</strong> (" +
+                dateTime +
+                "):<br>" +
+                message +
+                "</li>"
+            );
+          } else {
+            $("#messages-list").append(
+              "<li><strong>" +
+                name +
+                "</strong> (" +
+                dateTime +
+                "):<br>" +
+                message +
+                "</li>"
+            );
+          }
 
-</body>
+          $("#contact-form")[0].reset();
+        });
+      });
+    </script>
+  </body>
 </html>
