--- a/index.html
+++ b/index.html
@@ -1,102 +1,157 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Bootstrap Website</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="./css/testi.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Bootstrap Website</title>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="./css/testi.css" />
+  </head>
+  <body>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">Bootstrap Website</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./common/about.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./common/contact.html">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
 
-<!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Bootstrap Website</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="./common/about.html">About</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="./common/contact.html">Contact</a>
-      </li>
-    </ul>
-  </div>
-</nav>
-
-<!-- Home Page Content -->
-<div class="container mt-3">
-  <h1>Welcome to Bootstrap Website</h1>
-  <p>We create beautiful and responsive websites using Bootstrap.</p>
-</div>
-
-<!-- Accordion -->
-<div id="accordion">
-  <div class="card">
-    <div class="card-header" id="headingOne">
-      <h5 class="mb-0">
-        <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-          Accordion Item #1
-        </button>
-      </h5>
+    <!-- Home Page Content -->
+    <div class="container mt-3">
+      <h1>Welcome to Bootstrap Website</h1>
+      <p>We create beautiful and responsive websites using Bootstrap.</p>
     </div>
 
-    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
-      <div class="card-body">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin blandit consectetur ligula, ac dapibus mi pharetra et. Nulla facilisi. Aenean ultrices pellentesque dui ut dictum. Maecenas quis euismod mauris. Sed vel ipsum mauris. Duis imperdiet
-            neque vitae posuere lobortis. Donec molestie tellus ex, eu bibendum est pellentesque id. Aliquam erat volutpat. Suspendisse finibus orci eget dolor posuere hendrerit.
+    <!-- Accordion -->
+    <div id="accordion">
+      <div class="card">
+        <div class="card-header" id="headingOne">
+          <h5 class="mb-0">
+            <button
+              class="btn btn-link"
+              data-toggle="collapse"
+              data-target="#collapseOne"
+              aria-expanded="true"
+              aria-controls="collapseOne"
+            >
+              Accordion Item #1
+            </button>
+          </h5>
+        </div>
+
+        <div
+          id="collapseOne"
+          class="collapse show"
+          aria-labelledby="headingOne"
+          data-parent="#accordion"
+        >
+          <div class="card-body">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
+            blandit consectetur ligula, ac dapibus mi pharetra et. Nulla
+            facilisi. Aenean ultrices pellentesque dui ut dictum. Maecenas quis
+            euismod mauris. Sed vel ipsum mauris. Duis imperdiet neque vitae
+            posuere lobortis. Donec molestie tellus ex, eu bibendum est
+            pellentesque id. Aliquam erat volutpat. Suspendisse finibus orci
+            eget dolor posuere hendrerit.
+          </div>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card-header" id="headingTwo">
+          <h5 class="mb-0">
+            <button
+              class="btn btn-link collapsed"
+              data-toggle="collapse"
+              data-target="#collapseTwo"
+              aria-expanded="false"
+              aria-controls="collapseTwo"
+            >
+              Accordion Item #2
+            </button>
+          </h5>
+        </div>
+
+        <div
+          id="collapseTwo"
+          class="collapse"
+          aria-labelledby="headingTwo"
+          data-parent="#accordion"
+        >
+          <div class="card-body">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
+            blandit consectetur ligula, ac dapibus mi pharetra et. Nulla
+            facilisi. Aenean ultrices pellentesque dui ut dictum. Maecenas quis
+            euismod mauris. Sed vel ipsum mauris. Duis imperdiet neque vitae
+            posuere lobortis. Donec molestie tellus ex, eu bibendum est
+            pellentesque id. Aliquam erat volutpat. Suspendisse finibus orci
+            eget dolor posuere hendrerit.
+          </div>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card-header" id="headingThree">
+          <h5 class="mb-0">
+            <button
+              class="btn btn-link collapsed"
+              data-toggle="collapse"
+              data-target="#collapseThree"
+              aria-expanded="false"
+              aria-controls="collapseThree"
+            >
+              Accordion Item #3
+            </button>
+          </h5>
+        </div>
+
+        <div
+          id="collapseThree"
+          class="collapse"
+          aria-labelledby="headingThree"
+          data-parent="#accordion"
+        >
+          <div class="card-body">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
+            blandit consectetur ligula, ac dapibus mi pharetra et. Nulla
+            facilisi. Aenean ultrices pellentesque dui ut dictum. Maecenas quis
+            euismod mauris. Sed vel ipsum mauris. Duis imperdiet neque vitae
+            posuere lobortis. Donec molestie tellus ex, eu bibendum est
+            pellentesque id. Aliquam erat volutpat. Suspendisse finibus orci
+            eget dolor posuere hendrerit.
+          </div>
+        </div>
       </div>
     </div>
-  </div>
 
-  <div class="card">
-    <div class="card-header" id="headingTwo">
-      <h5 class="mb-0">
-        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-          Accordion Item #2
-        </button>
-      </h5>
-    </div>
-
-    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
-      <div class="card-body">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin blandit consectetur ligula, ac dapibus mi pharetra et. Nulla facilisi. Aenean ultrices pellentesque dui ut dictum. Maecenas quis euismod mauris. Sed vel ipsum mauris. Duis imperdiet
-            neque vitae posuere lobortis. Donec molestie tellus ex, eu bibendum est pellentesque id. Aliquam erat volutpat. Suspendisse finibus orci eget dolor posuere hendrerit.
-      </div>
-    </div>
-  </div>
-
-  <div class="card">
-    <div class="card-header" id="headingThree">
-      <h5 class="mb-0">
-        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-          Accordion Item #3
-        </button>
-      </h5>
-    </div>
-
-    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
-      <div class="card-body">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin blandit consectetur ligula, ac dapibus mi pharetra et. Nulla facilisi. Aenean ultrices pellentesque dui ut dictum. Maecenas quis euismod mauris. Sed vel ipsum mauris. Duis imperdiet
-            neque vitae posuere lobortis. Donec molestie tellus ex, eu bibendum est pellentesque id. Aliquam erat volutpat. Suspendisse finibus orci eget dolor posuere hendrerit.
-      </div>
-    </div>
-  </div>
-</div>
-
-
-
-<!-- JavaScript Files -->
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-
-</body>
+    <!-- JavaScript Files -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  </body>
 </html>
